--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -3,7 +3,7 @@ name: Sync Fork
 on:
   schedule:
     - cron: "0 * * * *"   
-  workflow_dispatch:       
+  workflow_dispatch:
 
 jobs:
   sync:
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+          fetch-depth: 0   
 
       - name: Set up Git
         run: |
@@ -27,10 +28,11 @@ jobs:
       - name: Merge upstream changes
         run: |
           git checkout main
-          git merge upstream/main
+          git merge upstream/main --allow-unrelated-histories || echo "No changes to merge"
 
       - name: Push changes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git push origin main
